# intraday-channel-engine

./: .gitignore  AGENTS.md  CONTEXT  README.md  pyproject.toml  run_backtest.ps1  run_live.ps1
configs/: backtest.yaml  backtest_config_sample.yaml  ib.yaml  ib_config_sample.yaml  live_config.yaml  live_config_sample.yaml  mu_2026-01-02_backtest.json  mu_backtest.json  parameter_set.csv  parameter_set_sample.csv
data/: mu_2026-01-02_backtest.json  mu_backtest.json
docs/: algorithm_hyperparameter_reduction_draft.md  ibapi_single_day_test_development_design.md  ibapi_single_day_test_flow_design.md  ibapi_single_day_test_phase_plan.md  live_connection_recovery_draft.md  phase3_expand.md  phase4_draft.md  phase5_draft.md  phase8_draft.md  revision_history.md
src/single_day_test/: __init__.py
src/single_day_test/application/: backtest_cli.py  backtest_scan.py  bar_processor.py  live_cli.py  live_order_submitter.py  single_day_runner.py  startup_confirmation.py  summary_service.py  threshold_policy.py
src/single_day_test/bar_feed/: backtest_feed.py  bar_validation.py  base.py  live_paper_feed.py
src/single_day_test/domain/: __init__.py  enums.py  errors.py  metrics.py  models.py  parameters.py  states.py
tests/: test_domain.py  test_engine.py  test_ib_config.py  test_ibapi_version.py  test_ids.py  test_live_cli_status.py  test_live_config.py  test_parameter_csv.py  test_phase3_expand.py  test_phase3_ibapi.py  test_phase4_live_feed.py  test_phase5_live_runner.py  test_phase7_order_submission.py  test_phase8_concurrent_runs.py  test_startup_confirmation.py
(+18 files in other folders)
