[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "intraday-channel-engine"
version = "0.1.0"
description = "Phase 0 – project skeleton and domain models"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "mypy>=1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
